<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.authenticated.pond.details.PondDetailsFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/teal_200"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pond_image_iv"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/pond_name"
        android:visibility="visible"
        android:src="@drawable/floating_island_11563055345"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/pond_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pond_name"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pond_image_iv" />
    <TextView
        android:id="@+id/fish_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avatar_name"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pond_name_tv" />
    <TextView
        android:id="@+id/fish_scientific_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fish_type"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fish_name_tv" />
    <Button
        android:id="@+id/analytics_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analytics"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:background="@drawable/favorites_button_bg"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fish_scientific_name_tv" />
    <TableLayout
        android:id="@+id/table_follows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analytics_button">
        <TableRow>
            <TextView
                android:text="@string/length"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"/>
            <TextView
                android:text="@string/width"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"/>
            <TextView
                android:text="@string/depth"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/left_tv"
                android:text="@string/dummy_number_a"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/middle_tv"
                android:text="@string/dummy_number_a"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/right_tv"
                android:text="@string/dummy_number_a"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

<com.google.android.material.tabs.TabLayout
    android:id="@+id/tab_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/teal_200"
    android:contentDescription="@string/story_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/profile_layout"
    app:tabBackground="@null"
    app:tabGravity="fill"
    app:tabIndicator="@drawable/tab_indicator"
    app:tabIndicatorAnimationMode="elastic"
    app:tabIndicatorColor="@null"
    app:tabIndicatorGravity="stretch"
    app:tabMode="fixed"
    android:foregroundGravity="center_horizontal"
    app:tabSelectedTextColor="@color/purple_700" />

<androidx.viewpager2.widget.ViewPager2
    android:id="@+id/view_pager"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/tab_layout"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintHorizontal_bias="0.5"/>

<ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>